# mnist-ai-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
config/: log4rs.yaml
networks/: network.json  network_1.json  network_10.json  network_100.json  network_low_lr.json  network_random.json
src/: layers.rs  lib.rs  main.rs  network.rs  neuron.rs  util.rs  utils.rs
src/app/: mod.rs
